--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="box_background">
         <header class="container_logo">
-            <img class="image_logo" src="/images/LOGO.png" alt="">
+            <img class="image_logo" src="/Site-Resposivo-Netflix/images/LOGO.png" alt="">
             <button class="button_open">Entrar</button>
         </header>
 
@@ -64,7 +64,7 @@
     <section class="row">
 
         <div >
-            <img class="banner_two" src="/images/banner2.gif"
+            <img class="banner_two" src="/Site-Resposivo-Netflix/images/banner2.gif"
                 alt="">
         </div>
         <div>
@@ -83,7 +83,7 @@
                 espaço feito só para elas, sem pagar a mais por isso.</h2>
         </div>
         <div class="block">
-            <img class="banner_three" src="/images/image.png" alt="">
+            <img class="banner_three" src="/Site-Resposivo-Netflix/images/image.png" alt="">
         </div>
     </section>
 
