--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
 
     </footer>
-    <script src="/script.js"></script>
+    <script src="/Site-Resposivo-Netflix/script.js"></script>
 </body>
 
 </html>
